--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "play-dl": "^1.9.7",
     "soundcloud-downloader": "^0.2.3",
     "string-progressbar": "^1.0.4",
-    "youtube-sr": "~4.3.0"
+    "youtube-sr": "~4.3.0",
+    "ytdl-core": "^4.11.5",
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
     "@types/i18n": "^0.13.12",
